2015-03-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex-bug73.test: The equivalent of 'tail -n+2' is 'sed 1d'.

2015-03-16  Karl Berry  <karl@tug.org>

	* xetex-bug73.test: sed 1,2d instead of tail -n+2, which
	is not supported on Solaris 10.  tlbuild mail from Mojca,
	16 Mar 2015 17:03:25.

2015-03-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* image/jpegimage.c: Fix a bug introduced by me on 2015-02-15.

2015-02-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_pic.c and image/jpegimage.c: Revert. The changes in 2015-02-09
	are discarded. The picture sizes obtained by the previous XeTeX are
	correct. Problems may be in xdvipdfmx or maybe cmyk colors are not
	supported.

2015-02-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_pic.c and image/jpegimage.c: Fix a bug to include jpeg images
	correctly (borrowed from dvipdfm-x).

2014-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/pngimage.c: Avoid PNG warnings.

2014-07-22  Khaled Hosny  <khaledhosny@eglug.org>

	* xetex.web, xetex.ch, tex.ch0: Switch right-to-left support from
	e-TeX's TeX--XeT to Knuth's original TeX-XeT code (with some fixes and
	slight modification to the DVI opcode) to fix TeX--XeT paired specials
	issue.

2014-07-15  Khaled Hosny  <khaledhosny@eglug.org>
            Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xetex-bug73.test: Shell script for a new test.
	* tests/bug73.{log,tex} (new): Test input and expected output.
	* am/xetex.am: Adjusted.

2014-07-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex_version.h: 0.99992

2014-07-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex.web: Remove unused variables k,and l in function
	get_strings_started, and q, and r in procedure set_math_char().
	* image/mfileio.c: Change type of a variable i in mfgets() in order to
	suppress warnings.
	* image/bmpimage.c: Remove an unused variable i in bmp_scan_file().
	* image/jpegimage.c: Remove an unused variable rational_value in
	read_APP1_Exif().